config publish to npm

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "rollup-plugin-dts": "^5.1.0",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
