--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionix/ui",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A collection of ready-to-use components based on styled-components",
   "repository": "https://github.com/pablogeokar/zionix-ui.git",
   "author": "Pablo George <pablogeokar@hotmail.com>",
@@ -21,7 +21,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "rollup": "rollup -c",
-    "postversion": "git push --follow-tags && git push --tags && npm publish && echo \"Successfully released version $npm_package_version!\""
+    "postversion": "git push && git push --tags && npm publish && echo \"Successfully released version $npm_package_version!\""
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.0",
