--- a/package.json
+++ b/package.json
@@ -28,13 +28,19 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^10.0.1",
     "@types/react": "^18.0.26",
+    "@types/styled-components": "^5.1.26",
+    "postcss": "^8.4.20",
     "react": "^18.2.0",
     "rollup": "^3.9.0",
     "rollup-plugin-dts": "^5.1.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "styled-components": "^5.3.6"
   }
 }
