--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionix/ui",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "A collection of ready-to-use components based on styled-components",
   "repository": "https://github.com/pablogeokar/zionix-ui.git",
   "author": "Pablo George <pablogeokar@hotmail.com>",
@@ -21,7 +21,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "rollup": "rollup -c",
-    "postversion": "git push && git push --tags && npm publish && echo \"Successfully released version $npm_package_version!\""
+    "postversion": "git push && git push --tags && echo \"Successfully git released version!\""
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.0",
@@ -30,17 +30,17 @@
     "@types/react": "^18.0.26",
     "@types/styled-components": "^5.1.26",
     "postcss": "^8.4.20",
-    "react": "^18.2.0",
     "rollup": "^3.9.0",
     "rollup-plugin-dts": "^5.1.0",
     "rollup-plugin-postcss": "^4.0.2",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4"
   },
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "styled-components": "^5.3.6"
+  },
   "publishConfig": {
     "access": "public"
-  },
-  "dependencies": {
-    "styled-components": "^5.3.6"
   }
 }
