--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionix/ui",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "description": "A collection of ready-to-use components based on styled-components",
   "repository": "https://github.com/pablogeokar/zionix-ui.git",
   "author": "Pablo George <pablogeokar@hotmail.com>",
@@ -21,7 +21,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "rollup": "rollup -c",
-    "postversion": "git push && git push --tags && echo \"Successfully git released version!\""
+    "postversion": "rollup -c && git push && git push --tags && echo \"Successfully git released version!\""
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.0",
