--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionix/ui",
-  "version": "0.0.11",
+  "version": "0.0.12",
   "description": "A collection of ready-to-use components based on styled-components",
   "repository": "https://github.com/pablogeokar/zionix-ui.git",
   "author": "Pablo George <pablogeokar@hotmail.com>",
@@ -38,6 +38,7 @@
   },
   "peerDependencies": {
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "styled-components": "^5.3.6"
   },
   "publishConfig": {
