--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionix/ui",
-  "version": "0.0.17",
+  "version": "0.0.18",
   "description": "A collection of ready-to-use components based on styled-components",
   "repository": "https://github.com/pablogeokar/zionix-ui.git",
   "author": "Pablo George <pablogeokar@hotmail.com>",
@@ -38,10 +38,12 @@
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6"
+    "react-dom": "^18.2.0"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "styled-components": "^5.3.6"
   }
 }
