--- a/tsconfig.json
+++ b/tsconfig.json
@@ -98,7 +98,7 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */,
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */,
     "jsx": "react",
     "module": "ESNext",
     "declaration": true,
@@ -109,4 +109,6 @@
     "allowSyntheticDefaultImports": true,
     "emitDeclarationOnly": true
   }
+  //"include": ["src/**/*"],
+  //"exclude": ["node_modules"]
 }
