--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "@zionix/ui",
-  "version": "0.0.22",
+  "version": "0.0.23",
   "description": "A collection of ready-to-use components based on styled-components",
   "repository": "https://github.com/pablogeokar/zionix-ui.git",
   "author": "Pablo George <pablogeokar@hotmail.com>",
   "license": "MIT",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "main": "dist/cjs/index.ts",
+  "module": "dist/esm/index.ts",
+  "files": [
+    "dist"
+  ],
+  "type": "module",
+  "types": "dist/index.d.ts",
+  "private": "false",
   "keywords": [
     "react",
     "typescript",
@@ -15,35 +21,18 @@
     "styled-components",
     "react-component"
   ],
-  "files": [
-    "dist"
-  ],
-  "types": "dist/index.d.ts",
   "scripts": {
-    "rollup": "rollup -c",
-    "postversion": "rollup -c && git push && git push --tags && echo \"Successfully git released version!\""
+    "build": "rollup -c"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.0",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^10.0.1",
     "@types/react": "^18.0.26",
-    "@types/styled-components": "^5.1.26",
-    "postcss": "^8.4.20",
+    "react": "^18.2.0",
     "rollup": "^3.9.0",
     "rollup-plugin-dts": "^5.1.0",
-    "rollup-plugin-postcss": "^4.0.2",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4"
-  },
-  "peerDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "dependencies": {
-    "styled-components": "^5.3.6"
   }
 }
