--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionix/ui",
-  "version": "0.0.23",
+  "version": "0.0.24",
   "description": "A collection of ready-to-use components based on styled-components",
   "repository": "https://github.com/pablogeokar/zionix-ui.git",
   "author": "Pablo George <pablogeokar@hotmail.com>",
@@ -22,7 +22,8 @@
     "react-component"
   ],
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "postversion": "rollup -c && git push && git push --tags && echo \"Successfully git released version!\""
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^24.0.0",
