--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionix/ui",
-  "version": "0.0.24",
+  "version": "0.0.25",
   "description": "A collection of ready-to-use components based on styled-components",
   "repository": "https://github.com/pablogeokar/zionix-ui.git",
   "author": "Pablo George <pablogeokar@hotmail.com>",
@@ -12,7 +12,6 @@
   ],
   "type": "module",
   "types": "dist/index.d.ts",
-  "private": "false",
   "keywords": [
     "react",
     "typescript",
@@ -35,5 +34,8 @@
     "rollup-plugin-dts": "^5.1.0",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
