--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionix/ui",
-  "version": "0.0.30",
+  "version": "0.0.31",
   "description": "A collection of ready-to-use components based on styled-components",
   "repository": "https://github.com/pablogeokar/zionix-ui.git",
   "author": "Pablo George <pablogeokar@hotmail.com>",
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "rollup": "^3.9.0",
     "rollup-plugin-dts": "^5.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4"
   },
