--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionix/ui",
-  "version": "0.0.31",
+  "version": "0.0.32",
   "description": "A collection of ready-to-use components based on styled-components",
   "repository": "https://github.com/pablogeokar/zionix-ui.git",
   "author": "Pablo George <pablogeokar@hotmail.com>",
@@ -31,16 +31,20 @@
     "@types/react": "^18.0.26",
     "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^3.9.0",
     "rollup-plugin-dts": "^5.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "styled-components": "^5.3.6",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4"
   },
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {
-    "styled-components": "^5.3.6"
+  "peerDependencies": {
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0",
+    "styled-components": ">=5.3.6"
   }
 }
