--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "skipLibCheck": true,
     "jsx": "react",
     "module": "esnext",
+    "lib": ["dom", "esnext"],
     "declaration": true,
     "declarationDir": "types",
     "sourceMap": true,
