--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionix/ui",
-  "version": "0.0.34",
+  "version": "0.0.35",
   "description": "A collection of ready-to-use components based on styled-components",
   "repository": "https://github.com/pablogeokar/zionix-ui.git",
   "author": "Pablo George <pablogeokar@hotmail.com>",
@@ -29,14 +29,13 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^10.0.1",
     "@types/react": "^18.0.26",
-    "@types/styled-components": "^5.1.26",
+    "postcss": "^8.4.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^3.9.0",
     "rollup-plugin-dts": "^5.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "styled-components": "^5.3.6",
-    "tslib": "^2.4.1",
+    "rollup-plugin-postcss": "^4.0.2",
     "typescript": "^4.9.4"
   },
   "publishConfig": {
@@ -44,7 +43,6 @@
   },
   "peerDependencies": {
     "react": ">=18.2.0",
-    "react-dom": ">=18.2.0",
-    "styled-components": ">=5.3.6"
+    "react-dom": ">=18.2.0"
   }
 }
