--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "module": "esnext",
     "lib": ["dom", "esnext"],
     "declaration": true,
