--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@zionix/ui",
-  "version": "0.0.71",
-  "description": "A collection of ready-to-use components based on styled-components",
+  "version": "0.1.1",
+  "description": "A collection of ready-to-use components ui/ux from react",
   "repository": "https://github.com/pablogeokar/zionix-ui.git",
   "author": "Pablo George <pablogeokar@hotmail.com>",
   "license": "MIT",
@@ -17,8 +17,8 @@
     "typescript",
     "ui",
     "library ui",
-    "styled-components",
-    "react-component"
+    "react-component",
+    "nextjs"
   ],
   "scripts": {
     "build": "rollup -c",
