--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionix/ui",
-  "version": "0.2.68",
+  "version": "0.2.69",
   "description": "A collection of ready-to-use components ui/ux from react",
   "repository": "https://github.com/pablogeokar/zionix-ui.git",
   "author": "Pablo George <pablogeokar@hotmail.com>",
@@ -38,17 +38,18 @@
     "rollup-plugin-dts": "^5.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
+    "tslib": "^2.4.1",
     "typescript": "^4.9.4"
   },
   "publishConfig": {
     "access": "public"
   },
   "peerDependencies": {
+    "phosphor-react": "^1.4.1",
     "react": ">=16",
     "react-dom": ">=16"
   },
   "dependencies": {
-    "phosphor-react": "^1.4.1",
-    "tslib": "^2.4.1"
+    "phosphor-react": "^1.4.1"
   }
 }
