--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zionix/ui",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "description": "A collection of ready-to-use components ui/ux from react",
   "repository": "https://github.com/pablogeokar/zionix-ui.git",
   "author": "Pablo George <pablogeokar@hotmail.com>",
@@ -32,6 +32,7 @@
     "@rollup/plugin-typescript": "^10.0.1",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
+    "node-sass": "^8.0.0",
     "postcss": "^8.4.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -39,6 +40,7 @@
     "rollup-plugin-dts": "^5.1.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
+    "sass": "^1.57.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4"
   },
